<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Constrant_Layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/coverprofile"
                    android:layout_width="0dp"
                    android:layout_height="255dp"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    app:layout_constrainedHeight="false"
                    app:layout_constrainedWidth="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/coverprofile" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="202dp"
                    android:layout_marginTop="148dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="#2588FD"
                    app:civ_border_width="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/coverprofile"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="252dp">

                <TextView
                    android:id="@+id/NameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name_profile"
                    android:textAlignment="center"
                    android:textColor="#2B2B2B"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/gradename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/gradename"
                    android:textColor="#050000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/idstudentname" />

                <TextView
                    android:id="@+id/grade2"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="156dp"
                    android:layout_marginTop="33dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/grade"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/gradename"
                    app:layout_constraintTop_toBottomOf="@+id/nameuse" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="58dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/name"
                    android:textColor="#070000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/NameProfile"
                    app:layout_constraintEnd_toEndOf="@+id/NameProfile"
                    app:layout_constraintEnd_toStartOf="@+id/NameProfile"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/idstudentname"
                    app:layout_constraintStart_toStartOf="@+id/NameProfile"
                    app:layout_constraintTop_toTopOf="@+id/NameProfile"
                    app:layout_constraintVertical_bias="0.127" />

                <TextView
                    android:id="@+id/idstudentname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kanit"
                    android:text="@string/idstudentname"
                    android:textColor="#020000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.257"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/nameuse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/nameuse"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/name"
                    app:layout_constraintTop_toTopOf="@+id/NameProfile" />

                <TextView
                    android:id="@+id/idstudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="141dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/idstudent"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.18"
                    app:layout_constraintStart_toStartOf="@+id/idstudentname"
                    app:layout_constraintTop_toTopOf="@+id/nameuse" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>